--- a/MRM/Views/MasterCampaign/Index.cshtml
+++ b/MRM/Views/MasterCampaign/Index.cshtml
@@ -10,14 +10,18 @@
 
     <div class="row">
         <div class="col-md-4">
-            @Html.ActionLink("Master Campaign", "MasterCampaign", "MasterCampaign",new { @class = "btn btn-block btn-primary btn-lg" })
+            <input type="button" class="btn btn-block btn-primary btn-lg" value="Master Campaign" onclick="location.href='@Url.Action("MasterCampaign", "MasterCampaign")'" />
+           
         </div>
         <div class="col-md-4">
-           @Html.ActionLink("Child Campaign", "ChildCampaign", "ChildCampaign", new { @class = "btn btn-block btn-primary btn-lg" })
+            <input type="button" class="btn btn-block btn-primary btn-lg" value="Child Campaign" onclick="location.href='@Url.Action("ChildCampaign", "ChildCampaign")'" />
+          
         </div>
         <div class="col-md-4">
-           @Html.ActionLink("Tactic Campaign", "TacticCampaign", "TacticCampaign", new { @class = "btn btn-block btn-primary btn-lg" })
-        </div>
+          
+            <input type="button" class="btn btn-block btn-primary btn-lg" value="Tactic Campaign" onclick="location.href='@Url.Action("TacticCampaign", "TacticCampaign")'" />
+              
+         </div>
     </div>
 
    
